@@ -1,5 +1,7 @@
 = master
 
+* Add r plugin for r method for accessing request, useful when r local variable is not in scope (jeremyevans)
+
 * Warn when loading a plugin with arguments or a block if the plugin does not accept arguments or block (jeremyevans)
 
 = 3.34.0 (2020-07-14)
